implement preprocessing function in project file

--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "from sklearn import svm\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import glob\n"
+    "import glob\n",
+    "import functools\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -22,10 +24,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Male_training_data='Data_split\\train\\Males\\\\*.jpg'\n",
+    "Female_training_data='Data_split\\train\\Females\\\\*.jpg'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preprocessing  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Preprocessing (image) : \n",
+    "    image = cv2.cvtColor(image,cv2.COLOR_RGB2GRAY)  # convert color from RGB to GRAY\n",
+    "    height, width = image.shape # get image dimensions\n",
+    "    img = cv2.GaussianBlur(image, (9, 9), 0) #decrease noise for dialation\n",
+    "    img = cv2.adaptiveThreshold(img, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY_INV, 101, 30) # apply threshold on blured image\n",
+    "    image = cv2.adaptiveThreshold(image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY_INV, 101, 30)  # apply threshold on original image\n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (15, 20)) \n",
+    "    img = cv2.dilate(img, kernel, iterations=8)\n",
+    "    contours = cv2.findContours(img, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[0] \n",
+    "    biggest_contour = functools.reduce(lambda c1, c2: c1 if cv2.contourArea(c1) > cv2.contourArea(c2) else c2,contours) #find the biggest contour for text area\n",
+    "    x, y, w, h = cv2.boundingRect(biggest_contour) # find smallest rect that can contain the text area after dialation\n",
+    "    image = image[y:y + h, x:x + w]\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Extraction"
+   ]
   },
   {
    "cell_type": "code",
