Implementing COLD features

--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -12,7 +12,9 @@
     "import pandas as pd\n",
     "import glob\n",
     "import functools\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import imutils\n",
+    "from PIL import Image, ImageEnhance"
    ]
   },
   {
@@ -28,8 +30,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Male_training_data='Data_split\\train\\Males\\\\*.jpg'\n",
-    "Female_training_data='Data_split\\train\\Females\\\\*.jpg'"
+    "Male_training_data='Data_split\\\\train\\\\Males\\\\*.jpg'\n",
+    "Female_training_data='Data_split\\\\train\\\\Females\\\\*.jpg'"
    ]
   },
   {
@@ -65,6 +67,96 @@
    "metadata": {},
    "source": [
     "Feature Extraction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1- COLD features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#define some constants for cold feature extraction \n",
+    "N_RHO_BINS = 7\n",
+    "N_ANGLE_BINS = 12\n",
+    "N_BINS = N_RHO_BINS * N_ANGLE_BINS\n",
+    "BIN_SIZE = 360 // N_ANGLE_BINS\n",
+    "R_INNER = 5.0\n",
+    "R_OUTER = 35.0\n",
+    "K_S = np.arange(3, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_contour_pixels(bw_image):\n",
+    "        contours, _= cv2.findContours(bw_image, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE) \n",
+    "        # contours = imutils.grab_contours(contours)\n",
+    "        contours = sorted(contours, key=cv2.contourArea, reverse=True)[1:]\n",
+    "        \n",
+    "        img2 = bw_image.copy()[:,:,np.newaxis]\n",
+    "        img2 = np.concatenate([img2, img2, img2], axis = 2)\n",
+    "        return contours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_cold_features(bw_image, approx_poly_factor = 0.01):\n",
+    "    \n",
+    "        contours = get_contour_pixels(bw_image)\n",
+    "        \n",
+    "        rho_bins_edges = np.log10(np.linspace(R_INNER, R_OUTER, N_RHO_BINS))\n",
+    "        feature_vectors = np.zeros((len(K_S), N_BINS))\n",
+    "        \n",
+    "        # print([len(cnt) for cnt in contours])\n",
+    "        for j, k in enumerate(K_S):\n",
+    "            hist = np.zeros((N_RHO_BINS, N_ANGLE_BINS))\n",
+    "            for cnt in contours:\n",
+    "                epsilon = approx_poly_factor * cv2.arcLength(cnt,True)\n",
+    "                cnt = cv2.approxPolyDP(cnt,epsilon,True)\n",
+    "                n_pixels = len(cnt)\n",
+    "                \n",
+    "                point_1s = np.array([point[0] for point in cnt])\n",
+    "                x1s, y1s = point_1s[:, 0], point_1s[:, 1]\n",
+    "                point_2s = np.array([cnt[(i + k) % n_pixels][0] for i in range(n_pixels)])\n",
+    "                x2s, y2s = point_2s[:, 0], point_2s[:, 1]\n",
+    "                \n",
+    "                thetas = np.degrees(np.arctan2(y2s - y1s, x2s - x1s) + np.pi)\n",
+    "                rhos = np.sqrt((y2s - y1s) ** 2 + (x2s - x1s) ** 2)\n",
+    "                rhos_log_space = np.log10(rhos)\n",
+    "                \n",
+    "                quantized_rhos = np.zeros(rhos.shape, dtype=int)\n",
+    "                for i in range(N_RHO_BINS):\n",
+    "                    quantized_rhos += (rhos_log_space < rho_bins_edges[i])\n",
+    "                    \n",
+    "                for i, r_bin in enumerate(quantized_rhos):\n",
+    "                    theta_bin = int(thetas[i] // BIN_SIZE) % N_ANGLE_BINS\n",
+    "                    hist[r_bin - 1, theta_bin] += 1\n",
+    "                \n",
+    "            normalised_hist = hist / hist.sum()\n",
+    "            feature_vectors[j] = normalised_hist.flatten()\n",
+    "            \n",
+    "        return feature_vectors.flatten()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2- HINGE features"
    ]
   },
   {
