Implementing HINGE features function

--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,10 +161,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#define some constants for hinge \n",
+    "N_ANGLE_BINS = 40\n",
+    "BIN_SIZE = 360 // N_ANGLE_BINS\n",
+    "LEG_LENGTH = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_hinge_features(bw_image):\n",
+    "        \n",
+    "        contours = get_contour_pixels(bw_image)\n",
+    "        \n",
+    "        hist = np.zeros((N_ANGLE_BINS, N_ANGLE_BINS))\n",
+    "            \n",
+    "        # print([len(cnt) for cnt in contours])\n",
+    "        for cnt in contours:\n",
+    "            n_pixels = len(cnt)\n",
+    "            if n_pixels <= LEG_LENGTH:\n",
+    "                continue\n",
+    "            \n",
+    "            points = np.array([point[0] for point in cnt])\n",
+    "            xs, ys = points[:, 0], points[:, 1]\n",
+    "            point_1s = np.array([cnt[(i + LEG_LENGTH) % n_pixels][0] for i in range(n_pixels)])\n",
+    "            point_2s = np.array([cnt[(i - LEG_LENGTH) % n_pixels][0] for i in range(n_pixels)])\n",
+    "            x1s, y1s = point_1s[:, 0], point_1s[:, 1]\n",
+    "            x2s, y2s = point_2s[:, 0], point_2s[:, 1]\n",
+    "            \n",
+    "            phi_1s = np.degrees(np.arctan2(y1s - ys, x1s - xs) + np.pi)\n",
+    "            phi_2s = np.degrees(np.arctan2(y2s - ys, x2s - xs) + np.pi)\n",
+    "            \n",
+    "            indices = np.where(phi_2s > phi_1s)[0]\n",
+    "            \n",
+    "            for i in indices:\n",
+    "                phi1 = int(phi_1s[i] // BIN_SIZE) % N_ANGLE_BINS\n",
+    "                phi2 = int(phi_2s[i] // BIN_SIZE) % N_ANGLE_BINS\n",
+    "                hist[phi1, phi2] += 1\n",
+    "                \n",
+    "        normalised_hist = hist / np.sum(hist)\n",
+    "        feature_vector = normalised_hist[np.triu_indices_from(normalised_hist, k = 1)]\n",
+    "        \n",
+    "        return feature_vector"
+   ]
   }
  ],
  "metadata": {
