classification with hinge features using SVM

--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "import functools\n",
     "import matplotlib.pyplot as plt\n",
     "import imutils\n",
-    "from PIL import Image, ImageEnhance"
+    "from PIL import Image, ImageEnhance\n",
+    "from sklearn import svm\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,6 +212,74 @@
     "        feature_vector = normalised_hist[np.triu_indices_from(normalised_hist, k = 1)]\n",
     "        \n",
     "        return feature_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def svm_test(features, times=100, test_size=0.2, **kwargs):\n",
+    "    tr_ac, ts_ac, mal, fem = 0, 0, 0, 0\n",
+    "    for i in range(times):\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(features[:,:-1], features[:,-1], test_size=test_size)\n",
+    "        clf = svm.SVC(**kwargs)\n",
+    "        clf.fit(X_train, y_train)\n",
+    "        tr_ac += clf.score(X_train, y_train)\n",
+    "        ts_ac += clf.score(X_test, y_test)\n",
+    "        mal += np.sum(clf.predict(features[:,:-1]) == 1) / len(features[:,:-1])\n",
+    "        fem += np.sum(clf.predict(features[:,:-1]) == 0) / len(features[:,:-1])\n",
+    "    ret = ts_ac * 100 / times, tr_ac * 100 / times, mal * 100 / times, fem * 100 / times\n",
+    "    print('male_predict% = {}\\nfemale_predict% = {}'.format(*ret[2:]))\n",
+    "    return ret[:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1- Feature extaction using Hinge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "male_predict% = 64.4083044982699\n",
+      "female_predict% = 35.591695501730094\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(84.1724137931034, 100.0)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Hinge_features = []\n",
+    "for file in glob.glob(Male_training_data):    \n",
+    "    img = cv2.imread(file)  #read male images\n",
+    "    img = Preprocessing(img)\n",
+    "    Hinge_features.append(np.append(get_hinge_features(img),1))\n",
+    "\n",
+    "for file in glob.glob(Female_training_data):    \n",
+    "    img = cv2.imread(file)  #read female images\n",
+    "    img = Preprocessing(img)\n",
+    "    Hinge_features.append(np.append(get_hinge_features(img),0))\n",
+    "\n",
+    "Hinge_features = np.array(Hinge_features)   \n",
+    "svm_test(Hinge_features,C=10,kernel=\"rbf\") "
    ]
   }
  ],
