--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,9 @@
     "import imutils\n",
     "from PIL import Image, ImageEnhance\n",
     "from sklearn import svm\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from skimage.feature import local_binary_pattern\n",
+    "from sklearn.preprocessing import normalize\n"
    ]
   },
   {
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +217,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3- LBP Features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_LBP_features (img) :\n",
+    "    radius = 2\n",
+    "    n_points = 16 * radius\n",
+    "    lbp = local_binary_pattern(img, n_points, radius, method='nri_uniform')\n",
+    "    n_bins = n_points * (n_points - 1) + 3\n",
+    "    lbp_hist = np.histogram(lbp.ravel(), bins=np.arange(n_bins + 1), density=True)[0]\n",
+    "    return lbp_hist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,42 +268,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "male_predict% = 64.4083044982699\n",
-      "female_predict% = 35.591695501730094\n"
+      "male_predict% = 67.4636678200692\n",
+      "female_predict% = 32.5363321799308\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(84.1724137931034, 100.0)"
+       "(70.51724137931033, 88.99999999999996)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Hinge_features = []\n",
+    "LBP_features = []\n",
     "for file in glob.glob(Male_training_data):    \n",
     "    img = cv2.imread(file)  #read male images\n",
     "    img = Preprocessing(img)\n",
-    "    Hinge_features.append(np.append(get_hinge_features(img),1))\n",
+    "    LBP_features.append(np.append(get_LBP_features(img),1))\n",
     "\n",
     "for file in glob.glob(Female_training_data):    \n",
     "    img = cv2.imread(file)  #read female images\n",
     "    img = Preprocessing(img)\n",
-    "    Hinge_features.append(np.append(get_hinge_features(img),0))\n",
-    "\n",
-    "Hinge_features = np.array(Hinge_features)   \n",
-    "svm_test(Hinge_features,C=10,kernel=\"rbf\") "
+    "    LBP_features.append(np.append(get_LBP_features(img),0))\n",
+    "LBP_features = np.array(LBP_features)\n",
+    "LBP_features[:,:-1] = normalize(LBP_features[:,:-1], axis=0) \n",
+    "svm_test(LBP_features,C=10,kernel=\"rbf\") \n"
    ]
   }
  ],
