pipeline-reconstruction + svm + performance analysis

--- a/Backup/Extract_Features.ipynb
+++ b/Backup/Extract_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,82 +19,36 @@
     "from sklearn.model_selection import train_test_split\n",
     "from skimage.feature import local_binary_pattern\n",
     "from sklearn.preprocessing import normalize\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import timeit\n",
-    "import pickle"
+    "import timeit"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Helper Functions"
+    "Read data of Males and Females"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "takes a function and it's arguments and then call it and calculate the time it takes to run\n",
-    "and return it with the returned value\n",
-    "'''\n",
-    "def function_timer(func, arg1, arg2, arg3):\n",
-    "    s = timeit.default_timer()\n",
-    "    val = func(arg1, arg2, arg3)\n",
-    "    f = timeit.default_timer()\n",
-    "    return (round((f-s)*100)/100.0) , val\n",
-    "'''\n",
-    "ceates a file with the given name and returnthe file object\n",
-    "if the file already exist it opens it and wipes it out\n",
-    "'''\n",
-    "def open_file(fileName):\n",
-    "    return open(fileName, \"w\")  #a --> for append       w --> for overwrite\n",
-    "'''\n",
-    "write a specific number in a given file object\n",
-    "'''\n",
-    "def write_in_file(file,number):\n",
-    "    file.write(str(number)+\"\\n\")\n",
-    "    return\n",
-    "'''\n",
-    "closes a given file object\n",
-    "'''\n",
-    "def close_file(file):\n",
-    "    file.close()\n",
-    "    return"
+    "Male_training_data='Data_split\\\\train\\\\Males\\\\*.jpg'\n",
+    "Female_training_data='Data_split\\\\train\\\\Females\\\\*.jpg'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read data Pathes of Males and Females"
+    "Preprocessing  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Male_training_data='Data_split/train/Males/*.jpg'\n",
-    "Female_training_data='Data_split/train/Females/*.jpg'\n",
-    "Male_testing_data='Data_split/test/Males/*.jpg'\n",
-    "Female_testing_data='Data_split/test/Females/*.jpg'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Preprocessing  Module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Feature Extraction Module"
+    "Feature Extraction"
    ]
   },
   {
@@ -129,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,185 +241,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "a function that return all the required features of a given image\n",
-    "'''\n",
-    "def get_features(img):\n",
-    "\n",
-    "    # creating the LBP_features\n",
-    "    LBP_features = get_LBP_features(img)\n",
-    "    #creating .... whatever featues\n",
-    "    #....\n",
-    "    #.....\n",
-    "    #append all features in one array\n",
-    "    all_features = LBP_features\n",
-    "    \n",
-    "    return all_features"
+    "def svm_test(features, times=100, test_size=0.2, **kwargs):\n",
+    "    tr_ac, ts_ac, mal, fem = 0, 0, 0, 0\n",
+    "    for i in range(times):\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(features[:,:-1], features[:,-1], test_size=test_size)\n",
+    "        clf = svm.SVC(**kwargs)\n",
+    "        clf.fit(X_train, y_train)\n",
+    "        tr_ac += clf.score(X_train, y_train)\n",
+    "        ts_ac += clf.score(X_test, y_test)\n",
+    "        mal += np.sum(clf.predict(features[:,:-1]) == 1) / len(features[:,:-1])\n",
+    "        fem += np.sum(clf.predict(features[:,:-1]) == 0) / len(features[:,:-1])\n",
+    "    ret = ts_ac * 100 / times, tr_ac * 100 / times, mal * 100 / times, fem * 100 / times\n",
+    "    print('male_predict% = {}\\nfemale_predict% = {}'.format(*ret[2:]))\n",
+    "    return ret[:2]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model Selection and Training Module:"
+    "1- Feature extaction using Hinge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "Model Training:\n",
-    "    a function that creates an svm model and train it with the given features\n",
-    "    then it saves the model after training\n",
-    "'''\n",
-    "def svm_train(**kwargs):\n",
-    "    #first we read the train data images and extract therir features\n",
-    "    features = []\n",
-    "    for file in glob.glob(Male_training_data):    \n",
-    "        img = cv2.imread(file)  #read male images\n",
-    "        img = Preprocessing(img)\n",
-    "        features.append(np.append(get_features(img),1))\n",
-    "\n",
-    "    for file in glob.glob(Female_training_data):    \n",
-    "        img = cv2.imread(file)  #read female images\n",
-    "        img = Preprocessing(img)\n",
-    "        features.append(np.append(get_features(img),0))\n",
-    "  \n",
-    "\n",
-    "    features = np.array(features)\n",
-    "    x_train = features[:,:-1]\n",
-    "    #standered scaler: scales the data to have mean = 0 and standered deviation = 1\n",
-    "    std_scaler = StandardScaler()\n",
-    "    x_train = std_scaler.fit_transform(x_train)\n",
-    "    y_train = features[:,-1]\n",
-    "    #svm clasifier\n",
-    "    svm_clf = svm.SVC(**kwargs)\n",
-    "    svm_clf.fit(x_train, y_train)\n",
-    "    # save the model to disk\n",
-    "    pickle.dump(svm_clf, open('svm_model.sav', 'wb'))\n",
-    "    pickle.dump(std_scaler, open('std_scaler.bin', 'wb'))\n",
-    "    return "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Performance Analysis Module:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "function that test a given image with a given svm model and returns it's prediction \n",
-    "valu:\n",
-    "1 --> male\n",
-    "0 --> females\n",
-    "'''\n",
-    "def svm_test(svm_clf,std_scaler, img):\n",
-    "    img = Preprocessing(img)\n",
-    "    features = get_features(img)\n",
-    "    features = std_scaler.transform([features])\n",
-    "    return  svm_clf.predict(features)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "this functon takes an svm_clf and generates the required reports for it based on the << imaged in the test file >>\n",
-    "'''\n",
-    "def analyse_performance(svm_clf,std_scaler):\n",
-    "    #open 2-files to write the output in them\n",
-    "    results_file = open_file(\"results.txt\")\n",
-    "    time_file = open_file(\"time.txt\")\n",
-    "    m_correct, m_count, f_correct, f_count = 0,0,0,0\n",
-    "    #testing all test images\n",
-    "    for file in glob.glob(Male_testing_data):    \n",
-    "        img = cv2.imread(file)  #read male images\n",
-    "        time,value = function_timer(svm_test, svm_clf, std_scaler, img)\n",
-    "        write_in_file(time_file,time)\n",
-    "        write_in_file(results_file,value)\n",
-    "        m_count+=1\n",
-    "        if value == 1:\n",
-    "            m_correct+=1\n",
-    "\n",
-    "    for file in glob.glob(Female_testing_data):    \n",
-    "        img = cv2.imread(file)  #read female images\n",
-    "        time,value = function_timer(svm_test, svm_clf, std_scaler, img)\n",
-    "        write_in_file(time_file,time)\n",
-    "        write_in_file(results_file,value)\n",
-    "        f_count+=1\n",
-    "        if value == 0:\n",
-    "            f_correct+=1\n",
-    "\n",
-    "    close_file(results_file)\n",
-    "    close_file(time_file)\n",
-    "\n",
-    "    return  (m_correct/m_count)*100, (f_correct/f_count)*100, ((m_correct + f_correct)/(m_count + f_count))*100"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Main blocks:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#training block\n",
-    "svm_train(C=10,kernel=\"rbf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "male correct percentage=  82.97872340425532 \n",
-      " female correct percentage=  70.37037037037037 \n",
-      " total correct percentage=  78.37837837837837\n"
+      "male_predict% = 67.4636678200692\n",
+      "female_predict% = 32.5363321799308\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(70.51724137931033, 88.99999999999996)"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#testinging block\n",
-    "svm_clf = pickle.load(open('svm_model.sav', 'rb'))\n",
-    "std_scaler = pickle.load(open('std_scaler.bin', 'rb'))\n",
-    "male_percentage, female_percentage, total_percentag = analyse_performance(svm_clf,std_scaler)\n",
-    "print(\"male correct percentage= \",male_percentage, \"\\n\", \"female correct percentage= \",female_percentage, \"\\n\", \"total correct percentage= \", total_percentag)"
+    "LBP_features = []\n",
+    "for file in glob.glob(Male_training_data):    \n",
+    "    img = cv2.imread(file)  #read male images\n",
+    "    img = Preprocessing(img)\n",
+    "    LBP_features.append(np.append(get_LBP_features(img),1))\n",
+    "\n",
+    "for file in glob.glob(Female_training_data):    \n",
+    "    img = cv2.imread(file)  #read female images\n",
+    "    img = Preprocessing(img)\n",
+    "    LBP_features.append(np.append(get_LBP_features(img),0))\n",
+    "LBP_features = np.array(LBP_features)\n",
+    "LBP_features[:,:-1] = normalize(LBP_features[:,:-1], axis=0) \n",
+    "svm_test(LBP_features,C=10,kernel=\"rbf\") \n"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "61cd7f7fd9e0050b53f5133f68e0d7220a96757240819c32c034789a574c6503"
+   "hash": "569f545527bfb29d6fb9aacc607f33a145e1de933e11224bb20d6923ac7349a0"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('anaconda3')",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
