--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,8 @@
     "from sklearn.preprocessing import normalize\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import timeit\n",
-    "import pickle"
+    "import pickle\n",
+    "from skimage.feature import greycomatrix, greycoprops\n"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +287,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4- GLCM Features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_glcm_features(gray_scale_img):\n",
+    "    \n",
+    "    #size of co-occ matrix = number of gray levels\n",
+    "    image_array = np.array(gray_scale_img)\n",
+    "    #print('first pixel= ', image_array[0][0])\n",
+    "    coocurrence_matrix = greycomatrix(image_array, [1], [0, np.pi / 4, np.pi / 2, 3 * np.pi / 4])\n",
+    "    contrast = greycoprops(coocurrence_matrix, 'contrast')\n",
+    "    homogeneity = greycoprops(coocurrence_matrix, 'homogeneity')\n",
+    "    #mean = greycoprops(coocurrence_matrix, 'mean')\n",
+    "    energy = greycoprops(coocurrence_matrix, 'energy')\n",
+    "    #entropy = greycoprops(coocurrence_matrix, 'entropy')\n",
+    "    #variance = greycoprops(coocurrence_matrix, 'variance')\n",
+    "    correlation = greycoprops(coocurrence_matrix, 'correlation')\n",
+    "    return contrast, homogeneity, energy, correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,15 +326,18 @@
     "'''\n",
     "def get_features(img):\n",
     "\n",
-    "    # creating the LBP_features\n",
-    "    LBP_features = get_LBP_features(img)\n",
-    "    #creating .... whatever featues\n",
-    "    #....\n",
-    "    #.....\n",
-    "    #append all features in one array\n",
-    "    all_features = LBP_features\n",
+    "    glcm_features = []\n",
+    "    contrast, homogeneity, energy, correlation= get_all_glcm_features((img * 255).astype(np.uint8))\n",
+    "    features = []\n",
+    "    features.append(contrast.ravel())\n",
+    "    features.append(homogeneity.ravel())\n",
+    "    features.append(energy.ravel())\n",
+    "    features.append(correlation.ravel())\n",
+    "    features = np.array(features).ravel()\n",
+    "    glcm_features.append(features)\n",
+    "    glcm_features = (np.array(glcm_features)).ravel()\n",
     "    \n",
-    "    return all_features"
+    "    return glcm_features"
    ]
   },
   {
@@ -316,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,16 +471,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "male correct percentage=  82.97872340425532 \n",
-      " female correct percentage=  70.37037037037037 \n",
-      " total correct percentage=  78.37837837837837\n"
+      "male correct percentage=  87.2340425531915 \n",
+      " female correct percentage=  44.44444444444444 \n",
+      " total correct percentage=  71.62162162162163\n"
      ]
     }
    ],
@@ -458,14 +491,21 @@
     "male_percentage, female_percentage, total_percentag = analyse_performance(svm_clf,std_scaler)\n",
     "print(\"male correct percentage= \",male_percentage, \"\\n\", \"female correct percentage= \",female_percentage, \"\\n\", \"total correct percentage= \", total_percentag)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "61cd7f7fd9e0050b53f5133f68e0d7220a96757240819c32c034789a574c6503"
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('anaconda3')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
