--- a/Backup/Extract_Features.ipynb
+++ b/Backup/Extract_Features.ipynb
@@ -19,7 +19,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from skimage.feature import local_binary_pattern\n",
     "from sklearn.preprocessing import normalize\n",
-    "import timeit"
+    "from skimage.feature import greycomatrix, greycoprops\n",
+    "from skimage.transform import resize\n",
+    "from skimage.feature import hog\n",
+    "from skimage import exposure\n"
    ]
   },
   {
@@ -31,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Male_training_data='Data_split\\\\train\\\\Males\\\\*.jpg'\n",
-    "Female_training_data='Data_split\\\\train\\\\Females\\\\*.jpg'"
+    "Male_training_data='..\\\\Data_split\\\\train\\\\Males\\\\*.jpg'\n",
+    "Female_training_data='..\\\\Data_split\\\\train\\\\Females\\\\*.jpg'"
    ]
   },
   {
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,8 +243,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4- GLCM Features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_glcm_features(gray_scale_img):\n",
+    "    \n",
+    "    #size of co-occ matrix = number of gray levels\n",
+    "    image_array = np.array(gray_scale_img)\n",
+    "    #print('first pixel= ', image_array[0][0])\n",
+    "    coocurrence_matrix = greycomatrix(image_array, [1], [0, np.pi / 4, np.pi / 2, 3 * np.pi / 4])\n",
+    "    contrast = greycoprops(coocurrence_matrix, 'contrast')\n",
+    "    homogeneity = greycoprops(coocurrence_matrix, 'homogeneity')\n",
+    "    #mean = greycoprops(coocurrence_matrix, 'mean')\n",
+    "    energy = greycoprops(coocurrence_matrix, 'energy')\n",
+    "    #entropy = greycoprops(coocurrence_matrix, 'entropy')\n",
+    "    #variance = greycoprops(coocurrence_matrix, 'variance')\n",
+    "    correlation = greycoprops(coocurrence_matrix, 'correlation')\n",
+    "    return contrast, homogeneity, energy, correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5- HOG Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def HOG (img):\n",
+    "    resized_image = cv2.resize(img.astype('float'), (64, 128))\n",
+    "    fd,hog_image = hog(resized_image,orientations=9,pixels_per_cell=(8,8),cells_per_block=(2,2),visualize=True)\n",
+    "    hog_image = np.array(hog_image)\n",
+    "    hog_image = hog_image.ravel() \n",
+    "    return hog_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,31 +317,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1- Feature extaction using Hinge"
+    "1- Feature extraction using GLCM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "male_predict% = 67.4636678200692\n",
-      "female_predict% = 32.5363321799308\n"
+      "male_predict% = 67.69896193771626\n",
+      "female_predict% = 32.30103806228374\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(70.51724137931033, 88.99999999999996)"
+       "(61.741379310344826, 100.0)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hog_features = []\n",
+    "for file in glob.glob(Male_training_data):    \n",
+    "    img = cv2.imread(file)  #read male images\n",
+    "    img = Preprocessing(img)\n",
+    "    hog_features.append(np.append(HOG(img),1))\n",
+    "    \n",
+    "\n",
+    "for file in glob.glob(Female_training_data):    \n",
+    "    img = cv2.imread(file)  #read male images\n",
+    "    img = Preprocessing(img)\n",
+    "    hog_features.append(np.append(HOG(img),0))\n",
+    "\n",
+    "hog_features = np.array(hog_features)\n",
+    "hog_features[:,:-1] = normalize(hog_features[:,:-1], axis=0)\n",
+    "svm_test(hog_features,C=10,kernel=\"rbf\") \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2- Feature extaction using LBP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11712/3491783038.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mLBP_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mglob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMale_training_data\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m#read male images\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mPreprocessing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mLBP_features\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mget_LBP_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'glob' is not defined"
+     ]
     }
    ],
    "source": [
@@ -310,10 +406,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "569f545527bfb29d6fb9aacc607f33a145e1de933e11224bb20d6923ac7349a0"
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
