--- a/Attempts/HOG.ipynb
+++ b/Attempts/HOG.ipynb
@@ -70,9 +70,22 @@
    "outputs": [],
    "source": [
     "def HOG (img):\n",
+    "    #It uses a detection window of 64x128 pixels, so the image is first converted into (64, 128) shape.\n",
     "    resized_image = cv2.resize(image.astype('float'), (64, 128))\n",
+    "    #The image is then further divided into small parts, and then the gradient and orientation of each part is calculated\n",
+    "    #It is divided into 8x16 cells into blocks with 50% overlap\n",
+    "    #so there are going to be 7x15 = 105 blocks in total\n",
+    "    #each block consists of 2x2 cells with 8x8 pixels.\n",
+    "    #We take the 64 gradient vectors of each block (8x8 pixel cell) and put them into a 9-bin histogram\n",
+    "    #hog function parameters:\n",
+    "    #orientations: Number of bins in the histogram we want to create, the original research paper used 9 bins \n",
+    "    #pixels_per_cell: Determines the size of the cell, as we mentioned earlier, it is 8x8.\n",
+    "    #cells_per_block: Number of cells per block, will be 2x2 as mentioned previously.\n",
+    "    #visualize: A boolean whether to return the image of the HOG, we set it to True\n",
     "    fd,hog_image = hog(resized_image,orientations=9,pixels_per_cell=(8,8),cells_per_block=(2,2),visualize=True)\n",
+    "    #convert hog_image to np array to use ravel() \n",
     "    hog_image = np.array(hog_image)\n",
+    "    #ravel(): is used to change a 2-dimensional array or a multi-dimensional array into a contiguous flattened array.\n",
     "    hog_image = hog_image.ravel() \n",
     "    return hog_image"
    ]
