--- a/Attempts/Image_Threshold_AND_crop.ipynb
+++ b/Attempts/Image_Threshold_AND_crop.ipynb
@@ -26,15 +26,30 @@
    "source": [
     "def Preprocessing (image) : \n",
     "    image = cv2.cvtColor(image,cv2.COLOR_RGB2GRAY)\n",
-    "    height, width = image.shape\n",
+    "    height, width = image.shape \n",
     "    img = cv2.GaussianBlur(image, (9, 9), 0) #decrease noise for dialation\n",
+    "    #For better accuracy, use binary images. So before finding contours, apply threshold\n",
+    "    #the algorithm determines the threshold for a pixel based on a small region around it\n",
+    "    #cv.ADAPTIVE_THRESH_MEAN_C: The threshold value is the mean of the neighbourhood area minus the constant C.\n",
+    "    #cv.ADAPTIVE_THRESH_GAUSSIAN_C: The threshold value is a gaussian-weighted sum of the neighbourhood values minus the constant C\n",
     "    img = cv2.adaptiveThreshold(img, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY_INV, 101, 30)\n",
     "    image = cv2.adaptiveThreshold(image, 255, cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY_INV, 101, 30)\n",
+    "    #A structuring element is a matrix that identifies the pixel in the image being processed and defines the neighborhood used in the processing of each pixel\n",
     "    kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (15, 20))\n",
+    "    #To make the text bigger and bigger we use dilation to increase text region and make it close to rectangles\n",
     "    img = cv2.dilate(img, kernel, iterations=8)\n",
+    "    #In OpenCV, finding contours is like finding white object from black background\n",
+    "    #Second argument is contour retrieval mode\n",
+    "    #RETR_EXTERNAL: retrieves only the extreme outer contours\n",
+    "    # Third argument is contour approximation method\n",
+    "    #CHAIN_APPROX_SIMPLE:compresses horizontal, vertical, and diagonal segments and leaves only their end points\n",
+    "    #For example, an up-right rectangular contour is encoded with 4 points.\n",
     "    contours = cv2.findContours(img, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)[0] \n",
-    "    biggest_contour = functools.reduce(lambda c1, c2: c1 if cv2.contourArea(c1) > cv2.contourArea(c2) else c2,contours) #find the biggest contour for text area\n",
-    "    x, y, w, h = cv2.boundingRect(biggest_contour) # find smallest rect that can contain the text area after dialation\n",
+    "    #Now we have a number of contours so we want to get the bigger one\n",
+    "    biggest_contour = functools.reduce(lambda c1, c2: c1 if cv2.contourArea(c1) > cv2.contourArea(c2) else c2,contours) \n",
+    "    # Find smallest rect that can contain the text area after dialation\n",
+    "    x, y, w, h = cv2.boundingRect(biggest_contour)\n",
+    "    #Now crop the image \n",
     "    image = image[y:y + h, x:x + w]\n",
     "    return image\n"
    ]
