--- a/Attempts/LBP_features.ipynb
+++ b/Attempts/LBP_features.ipynb
@@ -69,7 +69,14 @@
    "source": [
     "image = cv2.imread(\"..\\\\Data_split\\\\train\\\\Females\\\\F3.jpg\")\n",
     "img = Preprocessing(image)\n",
+    "#LBP looks at points surrounding a central point\n",
+    "#and tests whether the surrounding points are greater than or less than the central point\n",
+    "#The histogram of the LBP result is a good measure to classify textures\n",
+    "#n_points: Number of circularly symmetric neighbor set points \n",
+    "#radius: Radius of circle\n",
+    "#nri_uniform (method): non rotation-invariant uniform patterns variant which is only gray scale invariant (try it to increase accuracy only)\n",
     "lbp = local_binary_pattern(img, n_points, radius, method='nri_uniform')\n",
+    "#Number of bins of histogram\n",
     "n_bins = n_points * (n_points - 1) + 3\n",
     "lbp_hist = np.histogram(lbp.ravel(), bins=np.arange(n_bins + 1), density=True)[0]\n",
     "#lbp_normalized = np.linalg.norm(lbp_hist)\n",
