--- a/Extract_Features.ipynb
+++ b/Extract_Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,19 +325,20 @@
     "a function that return all the required features of a given image\n",
     "'''\n",
     "def get_features(img):\n",
-    "\n",
-    "    glcm_features = []\n",
-    "    contrast, homogeneity, energy, correlation= get_all_glcm_features((img * 255).astype(np.uint8))\n",
-    "    features = []\n",
-    "    features.append(contrast.ravel())\n",
-    "    features.append(homogeneity.ravel())\n",
-    "    features.append(energy.ravel())\n",
-    "    features.append(correlation.ravel())\n",
-    "    features = np.array(features).ravel()\n",
-    "    glcm_features.append(features)\n",
-    "    glcm_features = (np.array(glcm_features)).ravel()\n",
-    "    \n",
-    "    return glcm_features"
+    "    '''\n",
+    "        glcm_features = []\n",
+    "        contrast, homogeneity, energy, correlation= get_all_glcm_features((img * 255).astype(np.uint8))\n",
+    "        features = []\n",
+    "        features.append(contrast.ravel())\n",
+    "        features.append(homogeneity.ravel())\n",
+    "        features.append(energy.ravel())\n",
+    "        features.append(correlation.ravel())\n",
+    "        features = np.array(features).ravel()\n",
+    "        glcm_features.append(features)\n",
+    "        glcm_features = (np.array(glcm_features)).ravel()\n",
+    "    '''    \n",
+    "    hinge_features = get_hinge_features(img)\n",
+    "    return hinge_features"
    ]
   },
   {
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,26 +462,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "#training block\n",
-    "svm_train(C=10,kernel=\"rbf\")"
+    "svm_train(C=5,gamma='scale',kernel=\"rbf\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "male correct percentage=  87.2340425531915 \n",
-      " female correct percentage=  44.44444444444444 \n",
-      " total correct percentage=  71.62162162162163\n"
+      "male correct percentage=  95.74468085106383 \n",
+      " female correct percentage=  92.5925925925926 \n",
+      " total correct percentage=  94.5945945945946\n"
      ]
     }
    ],
@@ -502,10 +503,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   "hash": "61cd7f7fd9e0050b53f5133f68e0d7220a96757240819c32c034789a574c6503"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.8 64-bit ('anaconda3')",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
